--- a/main.ipynb
+++ b/main.ipynb
@@ -52,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = ThoracicPathoModel(**configs.MODEL)"
+    "model = ViTPathoModel(**configs.MODEL)"
    ]
   },
   {
